@@ -1,3 +1,7 @@
+[0, 15, 81]: 2018-12-06
+ - fix issue saving methods of metaclass derived classes (reported and fix provided
+   by `Douglas Raillard <https://bitbucket.org/DouglasRaillard/>`__)
+
 [0, 15, 80]: 2018-11-26
  - fix issue emitting BEL character when round-tripping invalid folded input
    (reported by Isaac on `StackOverflow <https://stackoverflow.com/a/53471217/1307905>`__)
